Fixed Some spacing issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -158,6 +158,8 @@
   padding: 20px;
   text-align: center;
   display: block;
+  width: 80px;
+
 }
 
 .feed-new-ss {
